kubernetes/whisparr/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  whisparr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: whisparr
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whisparr
    spec:
      containers:
      - image: ghcr.io/hotio/whisparr:latest
        name: whisparr
        resources:
          limits:
            cpu: "100m"
            memory: "256M"
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  6969
          name:  http
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: config
        # securityContext:
        #   runAsUser: 1000
        #   runAsGroup: 1000
        #   allowPrivilegeEscalation: true
      volumes:
        - name: media
          nfs:
            path: /tank/media
            server: "192.168.1.42"
        - name: config
          hostPath:
            path: /apps/config/whisparr
            type: DirectoryOrCreate
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroup: 1000
