kubernetes/whisparr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisparr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whisparr.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - whisparr.slfhst.io
    secretName: whisparr-cert-prod
  rules:
  - host: whisparr.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisparr
            port:
              name: http
